--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -1,5 +1,12 @@
 html {
+   box-sizing: border-box;
    height: -webkit-fill-available;
+}
+
+*,
+*:before,
+*:after {
+   box-sizing: inherit;
 }
 
 body {
@@ -7,5 +14,4 @@ body {
    padding: 0;
    font-family: 'Roboto', sans-serif;
    font-size: 16px;
-   box-sizing: border-box;
 }
